PrivilegesEvaluator do not serves mt configuration anymore